# square

./: .gitmodules  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json  reinstall-cmake.sh
include/lit/: entity.hpp  mesh.hpp  renderer.hpp  sdl_gl.hpp  sdl_gl_renderer.hpp  shader_program.hpp  system.hpp
include/lit/components/: camera.hpp  mesh.hpp  transform.hpp
include/lit/components/meshes/: quad_mesh.hpp  sphere_mesh.hpp  square_mesh.hpp  torus_mesh.hpp
include/lit/entities/: camera.hpp  material.hpp
include/lit/entities/materials/: basic_color.hpp  basic_texture.hpp
include/square/: entity.cpp  entity.hpp  renderer.cpp  renderer.hpp  sdl_gl.cpp  sdl_gl.hpp  system.cpp  system.hpp
include/square/components/: color.cpp  color.hpp  mesh.cpp  mesh.hpp  transform.cpp  transform.hpp
include/square/components/meshes/: char_mesh.cpp  char_mesh.hpp  circle_mesh.cpp  circle_mesh.hpp  cube_mesh.cpp  cube_mesh.hpp  cylinder_mesh.cpp  cylinder_mesh.hpp  line_mesh.cpp  line_mesh.hpp  sphere_mesh.cpp  sphere_mesh.hpp  square_mesh.cpp  square_mesh.hpp  torus_mesh.cpp  torus_mesh.hpp  triangle_mesh.cpp
include/square/entities/: camera.cpp  camera.hpp  material.cpp  material.hpp
include/square/entities/materials/: basic_color.cpp  basic_color.hpp  basic_texture.cpp  basic_texture.hpp
sample_apps/multi_window/: multi_window.cpp
sample_apps/sample_scene/: sample_scene.cpp
sample_apps/solid_color/: main.cpp  solid_color.cpp
sample_apps/triangle/: triangle.cpp
shaders/basic_color/: basic_color.vert
shaders/basic_material/: basic_material.frag  basic_material.vert
shaders/basic_texture/: basic_texture.frag  basic_texture.vert
shaders/vertex_color/: vertex_color.frag  vertex_color.vert
src/: entity.cpp  renderer.cpp  sdl_gl.cpp  sdl_gl_renderer.cpp  square.cpp
src/components/: transform.cpp
tests/: tests.cpp
